--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         async function fetchLatestFonts() {
             try {
                 // Helpful UI if the developer forgot to set PROXY_URL
-                if (!PROXY_URL || PROXY_URL.includes('https://eloquent-bubblegum-cbb995.netlify.app/')) {
+                if (!PROXY_URL || PROXY_URL.includes('ttps://eloquent-bubblegum-cbb995.netlify.app/.netlify/functions/gemini')) {
                     document.getElementById('loadingState').innerHTML = `
                         <div class="bg-white rounded-lg shadow-lg p-8 text-center">
                             <div class="text-yellow-500 text-6xl mb-4">⚠️</div>
